--- a/jekyll/_posts/2016-07-01-birds.md
+++ b/jekyll/_posts/2016-07-01-birds.md
@@ -23,7 +23,7 @@ Using physical wireless objects, birds are generated and animated in realtime. E
 A full documentation of the project is [here](http://itp.3laab.com/2016/11/30/tacto-final/)
 
 
-### Libraries used
+### Libraries and Hardware used
 - [three.js birds](https://threejs.org/examples/?q=canvas#canvas_geometry_birds)
 - [mapstastic.js](https://github.com/glowbox/maptasticjs)
 - [p5serial](https://github.com/vanevery/p5.serialport)
@@ -32,3 +32,4 @@ A full documentation of the project is [here](http://itp.3laab.com/2016/11/30/ta
 - [tracking.js](https://trackingjs.com/)
 - [ngrok](https://ngrok.com/)
 - Node js
+- Xbee
