added p5ml, scenescoop, carbon and uncanny rd

--- a/_posts/2016-09-26-selected.md
+++ b/_posts/2016-09-26-selected.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Selected Stories"
 date:   2016-09-26
 permalink: /works/selected/
-category: Machine Learning
+category: Machine Learning Experiments
 external_link: true
 link: "https://cvalenzuela.github.io/Selected_Stories/"
 thumbnail: /assets/images/works/selected/thumbnail.gif
