--- a/jekyll/_posts/2016-09-31-runwayml.md
+++ b/jekyll/_posts/2016-09-31-runwayml.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "Runway ML"
+title:  "Runway"
 date:   2016-09-31
 permalink: /works/runway/
-category: Machine Learning Tool
+category: Platform
 external_link: true
 link: "https://runwayml.com"
 thumbnail: /assets/images/works/runway/thumbnail.jpg
-description: "Runway is a desktop application for Mac, Windows, and Linux that enables users to easily run, build and train state of the art machine learning models using a simple visual interface and without writing any code."
+description: "Professional video editing powered by machine learning — all on the web."
 code: "https://github.com/runwayml"
 ---
